# aiogram_calendar_ru

./: pyproject.toml
aiogram_calendar/: schemas.py
