[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogram_calendar_ru"
version = "0.5.0"
description = "Простой встроенный календарь и инструмент выбора даты для Aiogram Telegram ботов"
readme = "README.md"
authors = [{ name = "Muwahhidun", email = "your-email@example.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
keywords = ['Aiogram', 'Telegram', 'Bots', 'Calendar']
dependencies = [
    'aiogram>=3'
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/Muwahhidun/aiogram_calendar_ru"

